# seu-nails-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: bot.py  config.py  smoke.py
app/db/: __init__.py  models.py  repo.py  session.py
app/handlers/: common.py
app/handlers/admin/: add_date.py  book_external.py  delete.py  view_dates.py
app/handlers/client/: book.py  browse.py  feedback.py  my_bookings.py  subscribe.py
app/keyboards/: inline.py
app/middlewares/: admin_only.py  user_ctx.py
app/services/: booking.py  error_reporter.py  notify.py  scheduler.py
app/sheets/: __init__.py  client.py  service.py
app/utils/: dates.py  logging.py
tests/: conftest.py  test_booking_service.py  test_delete_handler_notify.py  test_error_reporter.py
